# learn-opengl

./: CMakeLists.txt  README.md  blinn.cpp  camera.cpp  cube.cpp  main.cpp  phong.cpp  texture.cpp  triangle.cpp  triangle.h  window.cpp  window.h
assets/shaders/: blinn.frag  blinn.vert  cube.vert  light.frag  light.vert  phong.frag  phong.vert  texture.frag  texture.vert
glad/include/glad/: glad.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/src/: glad.c
lib/util/: CMakeLists.txt
lib/util/include/util/: gl.h
lib/util/src/: camera.cpp  fs.h  gl.cpp  image.cpp  osx_fs.cpp  shader.cpp  timer.cpp  win32_fs.cpp  window.cpp
util/: gl.cpp  gl.h  shader.cpp  shader.h  window.cpp
